# timeapp-UI

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  README.md  RELEASE_NOTES.md
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/workflows/: deploy-cloudflare.yml  deploy.yml  master_chrona-frontend(pr-1).yml  preview-cleanup.yml  preview-deploy.yml  preview-pr-deploy.yml  test-env-vars.yml  timeapp-v2-cicd.yml
infrastructure/: preview-app.bicep
nginx/: default.conf
timeapp-ui/: .env.production  constant.ts  env.sh  index.html  package-lock.json  package.json  sw.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
timeapp-ui - Copy/: .gitignore
timeapp-ui/lib/: api.ts  api.tsx  browsers.ts  env.ts  event-bus.ts  index.ts  system.ts
timeapp-ui/lib/hooks/: extension.ts  index.ts  notification-permission.ts  use-oauth-popups.ts  useInstallPrompt.ts  useIosInstall.ts  useSafariInstall.ts
timeapp-ui/lib/push/: base64.ts  index.ts  subscribe.ts  sw.js  sw.ts
timeapp-ui/public/: env-config.js.template
timeapp-ui/scripts/: test-env.js
timeapp-ui/src/: App.tsx  index.css  main.tsx  sw.js
timeapp-ui/src-tauri/: Cargo.toml  LICENSE  tauri.conf.json
timeapp-ui/src-tauri/src/: lib.rs  main.rs
timeapp-ui/src/components/: auth-switcher.tsx  authenticated.tsx  carousel-screen.tsx  extension.tsx  navbar.tsx  oauth-buttons.tsx  permission-prompt.tsx
timeapp-ui/src/context/: auth-context.tsx  use-auth.ts  (+1 more)
timeapp-ui/types/: dtypes.d.ts  env.d.ts  lib.d.ts  push.ts  pwa-register.d.ts
(+17 files in other folders)
